# delink

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: build.yaml
crates/delink-aarch64/src/: recover.rs
crates/delink-cli/: Cargo.toml
crates/delink-cli/src/: main.rs
crates/delink-core/src/: cu.rs  inspect.rs  symbols.rs
crates/delink-emit/src/: dwarf_relocs.rs  lib.rs
crates/delink-ida/: Cargo.toml  ida_export.py
crates/delink-ida/src/: emit.rs  idapro_json.rs  lib.rs  resolver.rs
crates/delink-macho/: Cargo.toml
crates/delink-macho/src/: cu.rs  emit.rs  lib.rs  stabs.rs  symbols.rs  symtab_json.rs  symtab_split.rs
crates/delink-pe/: Cargo.toml
crates/delink-pe/src/: cu.rs  emit.rs  lib.rs  symbols.rs
crates/delink-x86/: Cargo.toml
crates/delink-x86/src/: lib.rs  recover.rs
crates/delink-x86_64/: Cargo.toml
crates/delink-x86_64/src/: lib.rs  recover.rs
