[workspace]
resolver = "2"
members = [
    "crates/delink-core",
    "crates/delink-arch",
    "crates/delink-aarch64",
    "crates/delink-emit",
    "crates/delink-x86_64",
    "crates/delink-x86",
    "crates/delink-pe",
    "crates/delink-macho",
    "crates/delink-ida",
    "crates/delink-cli",
]

[workspace.package]
version = "0.6.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HaydnTrigg/delink"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
memmap2 = "0.9"
object = { version = "0.39.1", default-features = false, features = ["read", "write", "elf", "pe", "coff", "macho", "std"] }
gimli = { version = "0.33.0", default-features = false, features = ["read", "std"] }
addr2line = { version = "0.24", default-features = false, features = ["std", "loader"] }
capstone = "0.14.0"
iced-x86 = { version = "1", default-features = false, features = ["decoder", "instr_info", "std"] }
clap = { version = "4", features = ["derive"] }
rayon = "1"
insta = { version = "1", features = ["yaml"] }
pdb = "0.8"

delink-core = { path = "crates/delink-core" }
delink-arch = { path = "crates/delink-arch" }
delink-aarch64 = { path = "crates/delink-aarch64" }
delink-emit = { path = "crates/delink-emit" }
delink-x86_64 = { path = "crates/delink-x86_64" }
delink-x86 = { path = "crates/delink-x86" }
delink-pe = { path = "crates/delink-pe" }
delink-macho = { path = "crates/delink-macho" }
delink-ida = { path = "crates/delink-ida" }

[profile.release-lto]
inherits = "release"
lto = "fat"
strip = "debuginfo"
codegen-units = 1

[profile.release-min]
inherits = "release-lto"
opt-level = "z"
