[package]
name = "delink-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "delink"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
delink-core.workspace = true
delink-emit.workspace = true
delink-pe.workspace = true
delink-macho.workspace = true
delink-ida.workspace = true
memmap2.workspace = true
object.workspace = true
