[package]
name = "delink-macho"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
object = { workspace = true }
gimli = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
delink-x86 = { workspace = true }
